# argos-service-api/api.yml
@@ -520,7 +520,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/VerificationResult'
+                $ref: '#/components/schemas/ReleaseResult'
         '400':
           $ref: '#/components/responses/ValidationError'
         '500':
@@ -1774,4 +1774,31 @@ components:
             minItems: 1
             items:
               $ref: '#/components/schemas/Artifact'
+    ReleaseResult:
+      type: object
+      properties:
+        releaseIsValid:
+          type: boolean
+        releaseDossierMetaData:
+          $ref: '#/components/schemas/ReleaseDossierMetaData'
+
+    ReleaseDossierMetaData:
+      type: object
+      properties:
+        documentId:
+          type: string
+        releaseDate:
+          type: string
+          format: date
+        supplyChainPath:
+          type: string
+        releaseArtifacts:
+          type: array
+          minItems: 1
+          items:
+            type: array
+            minItems: 1
+            items:
+              type: string
+
 
